# notion-autobot-cli

./: .env.skel  .gitignore  README.md  pyproject.toml
notion_autobot_cli/: main.py  utils.py
templates/: projects.html  results.html
